# abauth

./: .pypirc  LICENSE  MANIFEST.in  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.py
abauth/: asgi.py  settings.py  urls.py  wsgi.py
src/abauth/: __init__.py  apps.py  models.py  settings.py
src/abauth.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/halazb_abauth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: base.html
templates/admin/: base_site.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
