[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halazb-abauth"
version = "0.1.3"
authors = [
    { name="Halazab", email="halazb27@gmail.com" },
]
description = "A comprehensive Django authentication system with advanced features"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "Django",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "qrcode",
    "Pillow",
    "python-dotenv",
    "django-redis",
    "django-ratelimit",
    "django-filter",
    "django-cleanup",
    "django-storages",
    "django-allauth",
]

[project.urls]
"Homepage" = "https://github.com/halazb/abauth"
"Bug Tracker" = "https://github.com/halazb/abauth/issues" 